--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "email-verifier": "^0.4.1",
+    "express": "^5.2.1",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.5",
     "reflect-metadata": "^0.2.2",
